update:优化项目构建脚本

--- a/.air.conf
+++ b/.air.conf
@@ -9,19 +9,19 @@ tmp_dir = "tmp"
 
 [build]
 # Just plain old shell command. You could use `make` as well.
-cmd = "wire gen ./internal/app && go build -o ./cmd/gin-admin/gin-admin ./cmd/gin-admin"
+cmd = "wire gen ./app && go build . -o ./fusion-gin-admin"
 # Binary file yields from `cmd`.
-bin = "./cmd/gin-admin/gin-admin"
+bin = "./fusion-gin-admin"
 # Customize binary.
-full_bin = "./cmd/gin-admin/gin-admin web -c ./configs/config.toml -m ./configs/model.conf --menu ./configs/menu.yaml"
+full_bin = "./fusion-gin-admin web -c ./config_file/config.toml -m ./config_file/model.conf --menu ./config_file/menu.yaml"
 # This log file places in your tmp_dir.
 log = "air_errors.log"
 # Watch these filename extensions.
 include_ext = ["go", "toml"]
 # Ignore these filename extensions or directories.
-exclude_dir = ["assets", "tmp", "data", "docs", "scripts", "vendor", "internal/app/swagger" ,"internal/app/test"]
+exclude_dir = ["assets", "tmp", "data", "docs", "scripts", "vendor", "swagger" ,"test"]
 # Ignore files
-exclude_file = ["internal/app/wire_gen.go"]
+exclude_file = ["app/wire_gen.go"]
 # There's no necessary to trigger build each time file changes if it's too frequency.
 delay = 5000 # ms
 # Stop running old binary when build errors occur.
