--- a/config_file/config.toml
+++ b/config_file/config.toml
@@ -52,7 +52,7 @@ Format = "text"
 # 日志输出(支持：stdout/stderr/file)
 Output = "stdout"
 # 指定日志输出的文件路径
-OutputFile = "data/fusion-ops.log"
+OutputFile = "data/fusion-gin-admin.log"
 # 是否启用日志钩子
 EnableHook = false
 # 写入钩子的日志级别
@@ -193,6 +193,6 @@ User = "root"
 # 密码
 Password = "123456"
 # 数据库
-DBName = "gin-admin"
+DBName = "fusion-gin-admin"
 # 连接参数
 Parameters = "charset=utf8mb4&parseTime=True&loc=Local&allowNativePasswords=true"
